Overflow-x prevented

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,4 +1,4 @@
-body{
+body > div{
     overflow-x: hidden;
 }
 
